--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -34,36 +34,83 @@ server {
  }
 
 
- location ~ \.php$ {
-   try_files $uri =404;
+ # AZURE CDN NUTRAXEN
+ location /cdn/nx/ {
 
-   fastcgi_split_path_info ^(.+\.php)(/.+)$;
-   fastcgi_pass   phpBackend;
-   fastcgi_index  index.php;
-   # IMPORTANT BELOW - NEEDS FULL PATH TO SITE DIRECTORY !!!
-   fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
-   include fastcgi_params;
-   fastcgi_intercept_errors        on;
-   fastcgi_ignore_client_abort     off;
-   fastcgi_connect_timeout 60;
-   fastcgi_send_timeout 180;
-   fastcgi_read_timeout 180;
-   fastcgi_buffer_size 128k;
-   fastcgi_buffers 4 256k;
-   fastcgi_busy_buffers_size 256k;
-   fastcgi_temp_file_write_size 256k;
+  # BASIC SETTINGS
+  keepalive_timeout  5;
+  allow              all;
+  server_tokens      off; 
 
- }
+  # PROXY SETTINGS
+  proxy_redirect         off;
+    proxy_set_header       Host              "www.nutraxen.com";
+  proxy_set_header       X-Real-IP         $remote_addr;
+  proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
+  proxy_set_header       X-Forwarded-Proto $scheme;
+  proxy_pass             http://ww1.decalicious.com;
+  proxy_temp_path        /usr/share/nginx/temp;
+  proxy_cache            STATIC;
+  proxy_cache_valid      200  1d;
+  proxy_cache_use_stale  error timeout invalid_header updating
+  http_500 http_502 http_503 http_504;
+  # PERFORMANCE
+  #expires                  max;
+  expires                   365d;
+  #add_header                Cache-Control "public, must-revalidate, proxy-revalidate";
+  add_header                Cache-Control "public";
+  #add_header               Last-Modified "";
+  #add_header                ETag "";
+  etag                      on;
+  gzip                      on;
+  gzip_vary                 on;
+  gzip_http_version         1.0;
+  gzip_disable              "MSIE [1-6].(?!.*SV1)";
+  gzip_min_length           750;
+  gzip_buffers              64 8k;
+  gzip_comp_level           3;
+  gzip_proxied              any;
+  gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  open_file_cache           max=1000 inactive=500s;
+  open_file_cache_valid     600s;
+  open_file_cache_errors    on;
+  break;  
+}
 
 
 
- # Logging - ON
- #error_log				/var/log/nginx/default-error.log;
- #access_log				/var/log/nginx/default-access.log;
 
- # Logging - Off
- access_log          /dev/null;
- error_log           /dev/null;
+
+location ~ \.php$ {
+ try_files $uri =404;
+
+ fastcgi_split_path_info ^(.+\.php)(/.+)$;
+ fastcgi_pass   phpBackend;
+ fastcgi_index  index.php;
+ # IMPORTANT BELOW - NEEDS FULL PATH TO SITE DIRECTORY !!!
+ fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
+ include fastcgi_params;
+ fastcgi_intercept_errors        on;
+ fastcgi_ignore_client_abort     off;
+ fastcgi_connect_timeout 60;
+ fastcgi_send_timeout 180;
+ fastcgi_read_timeout 180;
+ fastcgi_buffer_size 128k;
+ fastcgi_buffers 4 256k;
+ fastcgi_busy_buffers_size 256k;
+ fastcgi_temp_file_write_size 256k;
+
+}
+
+
+
+# Logging - ON
+#error_log				/var/log/nginx/default-error.log;
+#access_log				/var/log/nginx/default-access.log;
+
+# Logging - Off
+access_log          /dev/null;
+error_log           /dev/null;
 
 
 }
