--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -34,7 +34,13 @@ server {
  }
 
 
- # AZURE CDN - DECALICIOUS.com/X/
+
+ # ------------------------------------------
+ #     AZURE CDN - DECALICIOUS.com/X/
+ #     IIS will remove the /cdn/de/ from url via rewrite
+ #     Azure will remove /cdn/ automaically
+ #     This means all cdn urls start with /de/x/
+ #-------------------------------------------
  location /cdn/de/x/ {
 
   # BASIC SETTINGS
@@ -62,7 +68,8 @@ server {
   #add_header               Last-Modified "";
   #add_header                ETag "";
   etag                      on;
-  more_set_headers          "X-Server: AzureCDN";
+  more_clear_headers        'Server';
+  more_set_headers          "X-Server: Azure-CDN";
   gzip                      on;
   gzip_vary                 on;
   gzip_http_version         1.0;
@@ -81,7 +88,9 @@ server {
 
 
 
-
+# ------------------------------------------
+#     PHP FILES RUN LOCALLY ON THIS SERVER
+#-------------------------------------------
 location ~ \.php$ {
  try_files $uri =404;
 
