--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -5,6 +5,33 @@ upstream phpBackend {
   server 127.0.0.1:9000;
 }
 
+# ----------------------------------------------------
+#          BACKEND IIS SERVER FARM (Decalicious)     -
+# ----------------------------------------------------
+upstream iis-servers-decalicious {
+
+ # STICKY IP (SAME SERVER BASED ON IP)
+ ip_hash;
+
+ # UPSTREAM IIS SERVERS
+ server ww1.decalicious.com;
+ server ww2.decalicious.com;
+ #server ww3.decalicious.com;
+ #server ww4.decalicious.com;
+ #server ww5.decalicious.com;
+
+ # HEALTH CHECK SETTINGS
+ # https://github.com/yaoweibin/nginx_upstream_check_module
+ # Miliseconds
+ check interval=60000 rise=1 fall=2 timeout=2000 type=http;
+ check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: decalicious.com\r\n\r\n";
+ check_http_expect_alive http_2xx http_3xx;
+}
+
+
+
+
+
 
 # ---------------------------------------------------
 #     CLOUDAPP AZURE SERVER *.CLOUDAPP.NET
@@ -49,20 +76,20 @@ server {
   server_tokens      off; 
 
   # PROXY SETTINGS
-  proxy_redirect         off;
-  proxy_set_header       Host              "www.decalicious.com";
-  proxy_set_header       X-Real-IP         $remote_addr;
-  proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
-  proxy_set_header       X-Forwarded-Proto $scheme;
-  proxy_pass             http://ww1.decalicious.com;
-  proxy_temp_path        /usr/share/nginx/temp;
-  proxy_cache            STATIC;
-  proxy_cache_valid      200  1d;
-  proxy_cache_use_stale  error timeout invalid_header updating
+  proxy_redirect            off;
+  proxy_set_header          Host              "www.decalicious.com";
+  proxy_set_header          X-Real-IP         $remote_addr;
+  proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+  proxy_set_header          X-Forwarded-Proto $scheme;
+  proxy_pass                http://iis-servers-decalicious;
+  proxy_temp_path           /usr/share/nginx/temp;
+  proxy_cache               STATIC;
+  proxy_cache_valid         200  1d;
+  proxy_cache_use_stale     error timeout invalid_header updating
   http_500 http_502 http_503 http_504;
   # PERFORMANCE
   #expires                  max;
-  expires                   365d;
+  expires                   425d;
   #add_header                Cache-Control "public, must-revalidate, proxy-revalidate";
   add_header                Cache-Control "public";
   #add_header               Last-Modified "";
@@ -83,7 +110,7 @@ server {
   open_file_cache_valid     600s;
   open_file_cache_errors    on;
   break;  
-}
+  }
 
 
 
@@ -93,7 +120,6 @@ server {
 #-------------------------------------------
 location ~ \.php$ {
  try_files $uri =404;
-
  fastcgi_split_path_info ^(.+\.php)(/.+)$;
  fastcgi_pass   phpBackend;
  fastcgi_index  index.php;
@@ -109,14 +135,7 @@ location ~ \.php$ {
  fastcgi_buffers 4 256k;
  fastcgi_busy_buffers_size 256k;
  fastcgi_temp_file_write_size 256k;
-
-}
-
-
-
-# Logging - ON
-#error_log				/var/log/nginx/default-error.log;
-#access_log				/var/log/nginx/default-access.log;
+ }
 
 # Logging - Off
 access_log          /dev/null;
@@ -139,11 +158,15 @@ server {
    allow all;
    gzip                      on;
    gzip_vary                 on;
- }
+  }
 
  # Turn off logging
  access_log          /dev/null;
  error_log           /dev/null;
+
+ # Logging - ON
+ #error_log        /var/log/nginx/default-error.log;
+ #access_log       /var/log/nginx/default-access.log;
 
 
 }
