--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -212,7 +212,7 @@
     proxy_set_header       X-Real-IP         $remote_addr;
     proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header       X-Forwarded-Proto $scheme;
-    proxy_pass             http://iis-servers;
+    proxy_pass             http://iis-servers-decalicious;
     proxy_temp_path        /usr/share/nginx/temp;
     # TURN OFF CACHING FOR MAIN LOCATION
     proxy_cache            off;
@@ -236,7 +236,7 @@
     proxy_set_header       X-Real-IP         $remote_addr;
     proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header       X-Forwarded-Proto $scheme;
-    proxy_pass             http://iis-servers;
+    proxy_pass             http://iis-servers-decalicious;
     proxy_temp_path        /usr/share/nginx/temp;
     proxy_cache            STATIC;
     proxy_cache_valid      200  1d;
@@ -279,7 +279,7 @@
     proxy_set_header       X-Real-IP         $remote_addr;
     proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header       X-Forwarded-Proto $scheme;
-    proxy_pass             http://iis-servers;
+    proxy_pass             http://iis-servers-decalicious;
     proxy_temp_path        /usr/share/nginx/temp;
     proxy_cache            STATIC;
     proxy_cache_valid      200  1d;
