--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -98,22 +98,38 @@
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
-      gzip                  on;
-      gzip_vary             on;
-      etag                  on;
-      add_header            Cache-Control "private, max-age=0, no-cache";
-      more_set_headers      "Server: DECALS";
+
+      more_set_headers          "Server: DECALS";
+      add_header                Cache-Control "private, max-age=0, no-cache";
+      etag                      on;
+      expires                   20s;
+
+      # Gzip
+      gzip                      on;
+      gzip_vary                 on;
+      gzip_http_version         1.0;
+      gzip_disable              "MSIE [1-6].(?!.*SV1)";
+      gzip_min_length           750;
+      gzip_buffers              64 8k;
+      gzip_comp_level           3;
+      gzip_proxied              any;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+      
+      # Cache File Information
+      #open_file_cache           max=1000 inactive=500s;
+      #open_file_cache_valid     600s;
+      #open_file_cache_errors    on;
 
       # PROXY SETTINGS
-      proxy_redirect         off;
-      proxy_set_header       Host              $http_host;
-      proxy_set_header       X-Real-IP         $remote_addr;
-      proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header       X-Forwarded-Proto $scheme;
-      proxy_pass             http://iis-servers-decalicious;
-      proxy_temp_path        /usr/share/nginx/temp;
-      #proxy_connect_timeout  5;
-      #proxy_read_timeout     240;
+      proxy_redirect            off;
+      proxy_set_header          Host              $http_host;
+      proxy_set_header          X-Real-IP         $remote_addr;
+      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_pass                http://iis-servers-decalicious;
+      proxy_temp_path           /usr/share/nginx/temp;
+      #proxy_connect_timeout    5;
+      #proxy_read_timeout       240;
 
       # PROXY CACHING
       proxy_cache            off;
@@ -127,28 +143,44 @@
 
     # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
     location /x/ {
-      gzip                  on;
-      gzip_vary             on;
-      etag                  on;
-      add_header            Cache-Control "public";
-      more_set_headers      "Server: DECALS-X";
+
+      more_set_headers          "Server: DECALS-X";
+      add_header                Cache-Control "public";
+      etag                      on;
+      expires                   425d;
+      
+      # Cache File Information
+      open_file_cache           max=1000 inactive=500s;
+      open_file_cache_valid     600s;
+      open_file_cache_errors    on;
+
+      # Gzip
+      gzip                      on;
+      gzip_vary                 on;
+      gzip_http_version         1.0;
+      gzip_disable              "MSIE [1-6].(?!.*SV1)";
+      gzip_min_length           750;
+      gzip_buffers              64 8k;
+      gzip_comp_level           3;
+      gzip_proxied              any;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+ 
 
       # PROXY SETTINGS
-      proxy_redirect         off;
-      proxy_set_header       Host              $http_host;
-      proxy_set_header       X-Real-IP         $remote_addr;
-      proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header       X-Forwarded-Proto $scheme;
-      proxy_pass             http://iis-servers-decalicious;
-      proxy_temp_path        /usr/share/nginx/temp;
-      #proxy_connect_timeout  5;
-      #proxy_read_timeout     240;
+      proxy_redirect            off;
+      proxy_set_header          Host              $http_host;
+      proxy_set_header          X-Real-IP         $remote_addr;
+      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_pass                http://iis-servers-decalicious;
+      proxy_temp_path           /usr/share/nginx/temp;
+      #proxy_connect_timeout    5;
+      #proxy_read_timeout       240;
 
       # PROXY CACHING
       proxy_cache               STATIC;
       proxy_cache_valid         200 302 1d;
       proxy_cache_valid         404     1m;
-
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
 
